Version next

Version 2013.05.12.17b
* Add option to control the download button action (Firefox default / panel / library / classic window).
* Add an option to disable the download complete animation.
* Add an option to automatically clear the download complete button highlight.
* Do not highlight the download button if the panel/library/window is already open.

Version 2013.02.16.23
* Fix potential incorrect formatting of the location bar status display after clicking on a link.
* Fix RTL locale support.
* Updated translations for: de, nb-NO, sr, sv-SE, zh-TW

Version 2013.01.16.00b
* Drop support for Firefox 16.0 and older.
* Fix protocol hiding in the toolbar and pop-up.
* Update location bar progress styling.
* Integrate with the new downloads panel.
* Integrate with the new per-window private browsing.
* Updated translations for: bg-BG, cs, da, de, dsb, el, eo, es-ES, fr, he, hsb, it-IT, ja-JP, nb-NO, nl, pt-BR, ro, zh-CN, zh-TW

Version 2012.11.11.16b
* Make compatible with Firefox 19 CSS parser changes.

Version 2012.10.13.20b
* Drop support for Firefox 9.0 and older.
* Drop preference migration from S4E 2011.03.21.22 and older.
* Detect full-screen mode and display the status/link messages in the content pop-up when appropriate.

Version 2012.07.08.17
* Updated translations for: de, hu, tr

Version 2012.05.05.00b
* Fix alignment issues with the new identity box in Firefox 14+.
* Fix content pop-up fade in/out effects when displaying links.

Version 2012.04.21.13
* Updated translations for: fr

Version 2012.02.28.00b
* Re-write status pop-up binding to support Firefox 12+.
* Tear down S4E bindings on window destruction (some users have reported performance issues when opening and closing many windows).
* Un-highlight the domain when showing a link or status text in the location bar.
* Properly reset the download button when entering and exiting private browsing mode.

Version 2012.01.14.17
* Fix the mock location bar in the preference window.